# meeting-forge

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  MEJORAS_PROYECTO.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/chromadb/: chroma.sqlite3
evaluation/datasets/: example.json
planes/: 00-orquestador.md  01-bugs-y-deuda-tecnica.md  02-features.md  03-produccion.md  04-mejoras-usuario.md
prompts/extraction/: v1.md  v2.md
prompts/generation/: adr_v1.md  roadmap_v1.md  tech_doc_v1.md
scripts/: evaluate.py  index_docs.py  run_e2e.py
src/meeting_forge/: __init__.py  automation.py  chat.py  cli.py  config.py  dashboard.py  demo.py  meeting_store.py  memory.py  observability.py  pipeline.py  search.py  system_status.py  tasks.py
src/meeting_forge/analysis/: __init__.py  extractor.py  insights_editing.py  llm_client.py  schemas.py
src/meeting_forge/evaluation/: __init__.py  metrics.py  runner.py  schemas.py
src/meeting_forge/generation/: __init__.py  acta_strategy.py  adr_strategy.py  citations.py  diffing.py  filenames.py  generator.py  schemas.py  templates.py  update_strategy.py
src/meeting_forge/git_integration/: __init__.py  pr.py  publisher.py  repo.py  schemas.py  templates.py
src/meeting_forge/ingestion/: __init__.py  diarization.py  preprocessor.py  schemas.py  transcriber.py
src/meeting_forge/rag/: __init__.py  chunker.py  embeddings.py  indexer.py  retriever.py  schemas.py  vector_store.py
src/meeting_forge/ui/: __init__.py  app.py  evidence.py  loader.py
src/meeting_forge/validation/: __init__.py  schemas.py  store.py
tests/fixtures/: sample_insights.json  sample_result.json  sample_validation.json
tests/fixtures/sample_docs/: adr-001.md  glossary.md
tests/integration/: test_e2e.py  test_generation_e2e.py  test_phase4_e2e.py  test_rag.py
tests/unit/: test_automation.py  test_chat.py  test_chunker.py  test_config.py  test_dashboard.py  test_demo.py  test_diarization.py  test_evaluation_metrics.py  test_extractor_sources.py  test_generation_citations.py  test_generation_diffing.py  test_generation_filenames.py  test_generation_generator.py  test_generation_prompts.py  test_generation_templates.py  test_generation_update_strategy.py  test_git_integration_pr.py  test_git_integration_publisher.py  test_git_integration_repo.py  test_git_integration_templates.py  test_indexer.py  test_insights_editing.py  test_llm_client.py  test_meeting_store.py  test_memory.py  test_observability.py  test_pipeline.py  test_preprocessor.py  test_retriever.py  test_schemas.py  test_search.py  test_system_status.py  test_tasks.py  test_transcriber.py  test_ui_evidence.py  test_ui_loader.py  test_validation_store.py
