[project]
name = "meeting-forge"
version = "0.1.0"
description = "Sistema de IA generativa para transcribir reuniones técnicas y extraer insights estructurados"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [
    { name = "Nacho Fernandez" },
]
dependencies = [
    "faster-whisper>=1.0.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "markdown-it-py>=3.0.0",
]

[project.scripts]
meeting-forge = "meeting_forge.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "pre-commit>=3.8.0",
]
ui = [
    "streamlit>=1.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meeting_forge"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = ["E501"]  # line-length handled by formatter

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["B008"]  # Typer uses function calls in argument defaults by design
"src/meeting_forge/cli.py" = ["B008"]  # idem: comandos Typer

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["faster_whisper.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["streamlit.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring external resources (APIs, audio files, models)",
]
addopts = [
    "-ra",
    "--strict-markers",
]
